@@ -211,6 +211,12 @@ Library
 
 - Issue #6716/2: Backslash-replace error output in compilall.
 
+Extension Modules
+-----------------
+
+- Issue #2810: Fix cases where the Windows registry API returns
+  ERROR_MORE_DATA, requiring a re-try in order to get the complete result.
+
 Build
 -----
 
